--- a/style.css
+++ b/style.css
@@ -140,6 +140,27 @@ button{
     margin: 0px 0px 0px 50px;
 }
 
+.catatan{
+    margin: 0px 0px 0px 50px;
+}
+
+.catatan input[type="text"] {
+    width: 100%;
+    max-width: 400px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+.catatan input[type="text"]:focus {
+    outline: none;
+    border-color: #007BFF;
+    box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
 .inputanLogin input[type="text"],
 .inputanLogin input[type="password"] {
     width: 300px;
